# python_sem10_hw2

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  results.md  task.md
src/: benchmark_broker.py  benchmark_sync.py  worker.py
src/api/: dependencies.py  main.py  rabbitmq.py  routes.py  schemas.py
src/core/: config.py
src/db/: tasks.py
